--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,7 @@
 $primary-color: #fee91f;
 $secondary-color: #a1f977;
-$tertiary-color: #e12105;
+$tertiary-color: #ececec;
 $border-color: #9798b1;
+$primary-text: #1a1a1a;
 $primary-font: "Roboto Condensed", sans-serif;
+$primary-shadow: rgba(255, 255, 255, 0.3) 0px 3px 6px, rgba(255, 255, 255, 0.3) 0px 3px 6px;
