--- a/src/styles/Pagination.scss
+++ b/src/styles/Pagination.scss
@@ -1,4 +1,26 @@
+@import "../styles/functions.scss";
+@import "../styles/variables.scss";
+
+
 .container-pagination {
-    display: flex;
-    justify-content: center;
+    @include flexbox(row, center, center, nowrap);
+    margin: 20px 0px;
+
+    button {
+        margin: 20px;
+        width: 60px;
+        padding: 10px;
+        font-size: 1rem;
+        background-color: $primary-color;
+        font-weight: 600;
+        box-shadow: $primary-shadow;
+        border: 1px solid $secondary-color;
+        border-radius: 10px;        
+    }
+
+    button:hover {
+        border: 1px solid $primary-color;
+        background-color: $secondary-color;
+    }
 }
+
