--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,7 +1,7 @@
-@import "./styles/variables.scss";
+@import "./variables.scss";
 
 body {
-  background-image: url("./assets/starfield.jpg");
+  background-image: url("../assets/starfield.jpg");
   background-repeat: repeat;
   font-family: $primary-font;
   margin: 0;
