--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -30,10 +30,8 @@
         }
     }
 
-    .container-info {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
+    .container-info {        
+        @include flexbox(row, space-around, center, nowrap);
         height: 40px;
         padding: 20px 0px;
 
