--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -27,6 +27,7 @@ header {
     h2 {
         font-size: 1.8rem;
         color: $tertiary-color;
+        letter-spacing: 5px;
         @include notebook() {
             font-size: 1.6;
         }
