modifico hook para tomar data cacheada por sw, desarrollo funcionalidad de busqueda y componente nodata, corrijo ordenamiento de imports y estilos

--- a/src/styles/Error.scss
+++ b/src/styles/Error.scss
@@ -4,7 +4,7 @@
 @import "../styles/mixins.scss";
 
 .container-error {        
-    font-family: "distant-galaxy", sans-serif; 
+    font-family: $secondary-font; 
     @include flexbox(column, space-evenly, center, nowrap);   
     color: $tertiary-color;
     height: 90vh;
