--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -7,7 +7,7 @@ header {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    font-family: "distant-galaxy", sans-serif;    
+    font-family: $secondary-font;    
 
     .header-img {
         width: 40%;
