--- a/src/styles/Pagination.scss
+++ b/src/styles/Pagination.scss
@@ -6,7 +6,7 @@
     margin: 20px 0px;    
 
     button {
-        margin: 20px;
+        margin: 20px 10px;
         width: 60px;
         padding: 10px;
         font-size: 1rem;
@@ -20,6 +20,10 @@
 
     button:hover {        
         background-color: $secondary-color;
+    }
+
+    .first-last-button {
+        margin: 20px 5px;
     }
 }
 
