--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,4 +4,5 @@ $tertiary-color: #ececec;
 $border-color: #9798b1;
 $primary-text: #1a1a1a;
 $primary-font: "Roboto Condensed", sans-serif;
+$secondary-font: "distant-galaxy", sans-serif;
 $primary-shadow: rgba(255, 255, 255, 0.3) 0px 3px 6px, rgba(255, 255, 255, 0.3) 0px 3px 6px;
