--- a/src/styles/SearchCharacter.scss
+++ b/src/styles/SearchCharacter.scss
@@ -22,4 +22,8 @@
         padding: 10px 10px;
         width: 80px;
     }
+
+    .input-submit:hover {
+        background-color: $primary-color;
+    }
 }
